--- a/index.html
+++ b/index.html
@@ -32,6 +32,51 @@
 
 </head>
 <body id="top">
+
+  <!-- MAIN CONTENT
+  --------------------------------------------------------->
+
+  <!-- Navigation
+  ------------------------------------->
+  <nav class="nav">
+    <div class="nav__container">
+
+      <div class="nav__burger" onclick="toggleMenu()"><span class="fas fa-bars"></span></div>
+
+      <!-- Nav links and logo -->
+      <ul class="nav__list">
+        <div class="nav__logo">
+          <a href="#"><img src="/img/logo-dark.png" alt="E-Biblio Logo"></a>
+        </div>
+
+        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="books.html" class="nav__link">Books</a></li>
+        <li class="nav__item"><a href="about.html" class="nav__link">About</a></li>
+        <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
+      </ul>
+
+      <!-- Login, cart and account -->
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#" class="nav__link" style="font-weight: 400; padding-right: 6rem;">Login / Register</a></li>
+        <li class="nav__item"><a href="#" class="nav__icon"><i class="fas fa-shopping-basket"></i></a></li>
+        <li class="nav__item"><a href="#" class="nav__icon"><i class="fas fa-user-circle"></i></a></li>
+      </ul>
+
+    </div>
+  </nav>
   
+
+
+
+
+
+  <!-- JAVASCRIPT
+  --------------------------------------------------------->
+  <script type='text/javascript' src="/js/toggleMenu.min.js" defer></script>
+
+
+  <!-- END DOCUMENT
+  --------------------------------------------------------->
+
 </body>
 </html>
