Convert some paddings to margins to avoid mouse pointer on hover over empty space.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!-- Login, cart and account -->
       <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link" style="font-weight: 400; padding-right: 6rem;">Login / Register</a></li>
+        <li class="nav__item"><a href="#" class="nav__link" style="font-weight: 400; margin-right: 6rem;">Login / Register</a></li>
         <li class="nav__item"><a href="#" class="nav__icon"><i class="fas fa-shopping-basket"></i></a></li>
         <li class="nav__item"><a href="#" class="nav__icon"><i class="fas fa-user-circle"></i></a></li>
       </ul>
