Create hero page titles and background image.

--- a/index.html
+++ b/index.html
@@ -76,8 +76,25 @@
 
     </div>
   </nav>
-  
 
+
+
+
+
+  <!-- Hero Screen
+  ------------------------------------->
+  <section class="hero">
+    <div class="hero__container container">
+
+      <div class="hero__bg-overlay"></div>
+
+      <div class="hero__titles">
+        <h1 class="hero__h1">Welcome to<br><span class="hero__h1--color-primary">E-Biblio </span>Online</h1>
+        <a class="hero__link" href="#">Shop now</i></a>
+      </div>
+
+    </div>
+  </section>
 
 
 
