Completed navigation and made responsive.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Icons & Dropdown -->
       <ul class="nav__icons">
         <li class="nav__item"><a href="#" class="nav__icon cartIcon"><i class="fas fa-shopping-basket"></i></a></li>
-        <li class="nav__item"><a href="#" class="nav__icon userIcon" onclick="toggleDropdownMenu()"><i class="fas fa-user-circle"></i></a></li>
+        <li class="nav__item"><a class="nav__icon userIcon" onclick="toggleDropdownMenu()"><i class="fas fa-user-circle"></i></a></li>
         <!-- Account Dropdown -->
         <ul class="nav__dropdown">
           <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link username"><strong>username</strong></a></li>
@@ -101,8 +101,9 @@
 
   <!-- JAVASCRIPT
   --------------------------------------------------------->
+  <script type='text/javascript' src="/js/navDropdown.js"></script>
+  <script type='text/javascript' src="/js/navScrollBackground.js"></script>
   <script type='text/javascript' src="/js/burgerMenu.js"></script>
-  <script type='text/javascript' src="/js/dropdownMenu.js"></script>
 
 
   <!-- END DOCUMENT
