Add code comments.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   <nav class="nav">
     <div class="nav__container">
 
-      
-      <!-- MAIN NAV -->
+      <!-- Nav Logo -->
       <div class="nav__logo">
         <a href="#"><img src="/img/logo-dark.png" alt="E-Biblio Logo"></a>
       </div>
 
+      <!-- Nav Links -->
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="books.html" class="nav__link">Books</a></li>
@@ -54,7 +54,7 @@
         <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
       </ul>
 
-      <!-- Icons & Dropdown -->
+      <!-- Basket & Account Icons -->
       <ul class="nav__icons">
         <li class="nav__item"><a href="#" class="nav__icon cartIcon"><i class="fas fa-shopping-basket"></i></a></li>
         <li class="nav__item"><a class="nav__icon userIcon" onclick="toggleDropdownMenu()"><i class="fas fa-user-circle"></i></a></li>
@@ -86,8 +86,10 @@
   <section class="hero">
     <div class="hero__container container">
 
+      <!-- Hero BG Image -->
       <div class="hero__bg-overlay"></div>
 
+      <!-- Hero Titles -->
       <div class="hero__titles">
         <h1 class="hero__h1">Welcome to<br><span class="hero__h1--color-primary">E-Biblio </span>Online</h1>
         <a class="hero__link" href="#">Shop now</i></a>
