Begin featured titles section and fix bug with mobile navbar background colour.

--- a/index.html
+++ b/index.html
@@ -91,8 +91,25 @@
 
       <!-- Hero Titles -->
       <div class="hero__titles">
-        <h1 class="hero__h1">Welcome to<br><span class="hero__h1--color-primary">E-Biblio </span>Online</h1>
+        <h1 class="hero__h1">Welcome to<br><span class="text--color-primary">E-Biblio </span>Online</h1>
         <a class="hero__link" href="#">Shop now</i></a>
+      </div>
+
+    </div>
+  </section>
+
+
+
+
+
+  <!-- Featured Titles
+  ------------------------------------->
+  <section class="featured">
+    <div class="featured__container container">
+
+      <div class="featured__titles">
+        <h2 class="featured__heading">Featured <span class="text--color-primary">Titles</span></h2>
+        <p class="featured__description">Looking for something new to read? Check out some of our staff's top picks for this month for some inspiration.</p>
       </div>
 
     </div>
