Build book-grid component and make fully mobile responsive.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <!-- Hero Titles -->
       <div class="hero__titles">
-        <h1 class="hero__h1">Welcome to<br><span class="text--color-primary">E-Biblio </span>Online</h1>
+        <h1 class="hero__h1">Welcome to<br><span>E-Biblio </span>Online</h1>
         <a class="hero__link" href="#">Shop now</i></a>
       </div>
 
@@ -107,13 +107,76 @@
   <section class="featured">
     <div class="featured__container container">
 
+      <!-- Heading -->
       <div class="featured__titles">
-        <h2 class="featured__heading">Featured <span class="text--color-primary">Titles</span></h2>
+        <h2 class="featured__heading">Featured <span>Titles</span></h2>
         <p class="featured__description">Looking for something new to read? Check out some of our staff's top picks for this month for some inspiration.</p>
+      </div>
+
+
+      <!-- Book Grid -->
+      <div class="featured__book-grid book-grid">
+
+        <div class="book-grid__item">
+          <a href="#" class="book-grid__link">
+            <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+          </a>
+          <a href="#" class="book-grid__link">
+            <h5 class="book-grid__author">J K Rowling</h5>
+          </a>
+          <h5 class="book-grid__price">£7.99</h5>
+        </div>
+
+        <div class="book-grid__item">
+          <a href="#" class="book-grid__link">
+            <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+          </a>
+          <a href="#" class="book-grid__link">
+            <h5 class="book-grid__author">J K Rowling</h5>
+          </a>
+          <h5 class="book-grid__price">£7.99</h5>
+        </div>
+
+        <div class="book-grid__item">
+          <a href="#" class="book-grid__link">
+            <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+          </a>
+          <a href="#" class="book-grid__link">
+            <h5 class="book-grid__author">J K Rowling</h5>
+          </a>
+          <h5 class="book-grid__price">£7.99</h5>
+        </div>
+
+        <div class="book-grid__item">
+          <a href="#" class="book-grid__link">
+            <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+          </a>
+          <a href="#" class="book-grid__link">
+            <h5 class="book-grid__author">J K Rowling</h5>
+          </a>
+          <h5 class="book-grid__price">£7.99</h5>
+        </div>
+
+        <div class="book-grid__item">
+          <a href="#" class="book-grid__link">
+            <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+            <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+          </a>
+          <a href="#" class="book-grid__link">
+            <h5 class="book-grid__author">J K Rowling</h5>
+          </a>
+          <h5 class="book-grid__price">£7.99</h5>
+        </div>
+
       </div>
 
     </div>
   </section>
+
 
 
 
