Create registration prompt banner section and make mobile responsive.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="hero">
     <div class="hero__container container">
 
-      <!-- Hero BG Image -->
+      <!-- Hero BG Image Overlay-->
       <div class="hero__bg-overlay"></div>
 
       <!-- Hero Titles -->
@@ -117,6 +117,7 @@
       <!-- Book Grid -->
       <div class="featured__book-grid book-grid">
 
+        <!-- Book Grid Item -->
         <div class="book-grid__item">
           <a href="#" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
@@ -128,6 +129,7 @@
           <h5 class="book-grid__price">£7.99</h5>
         </div>
 
+        <!-- Book Grid Item -->
         <div class="book-grid__item">
           <a href="#" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
@@ -139,6 +141,7 @@
           <h5 class="book-grid__price">£7.99</h5>
         </div>
 
+        <!-- Book Grid Item -->
         <div class="book-grid__item">
           <a href="#" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
@@ -150,6 +153,7 @@
           <h5 class="book-grid__price">£7.99</h5>
         </div>
 
+        <!-- Book Grid Item -->
         <div class="book-grid__item">
           <a href="#" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
@@ -161,6 +165,7 @@
           <h5 class="book-grid__price">£7.99</h5>
         </div>
 
+        <!-- Book Grid Item -->
         <div class="book-grid__item">
           <a href="#" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
@@ -172,6 +177,25 @@
           <h5 class="book-grid__price">£7.99</h5>
         </div>
 
+      </div>
+
+    </div>
+  </section>
+
+
+
+
+
+  <!-- Registration Prompt
+  ------------------------------------->
+  <section class="reg-prompt">
+    <div class="reg-prompt__container container">
+
+      <!-- Content -->
+      <div class="reg-prompt__content">
+        <h2 class="reg-prompt__heading">Become A Member Today</h2>
+        <p class="reg-prompt__description">Found a book you like, but don't want to buy it right away? Become a member and get your own personal wishlist where you can save titles for later. You'll also gain access to your purchase history, where you can download previously purchased titles on demand.</p>
+        <a href="#" class="reg-prompt__button button--primary button--large">Register</a>
       </div>
 
     </div>
