Remove some unused images and resize images for web optimization.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- Nav Logo -->
       <div class="nav__logo">
-        <a href="#"><img src="/img/logo-dark.png" alt="E-Biblio Logo"></a>
+        <a href="#"><img src="/img/logo.png" alt="E-Biblio Logo"></a>
       </div>
 
       <!-- Nav Links -->
