--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <nav class="nav">
     <div class="nav__container">
 
-      <!-- Nav Logo -->
+      <!-- Logo -->
       <div class="nav__logo">
-        <a href="#"><img src="/img/logo.png" alt="E-Biblio Logo"></a>
+        <img src="/img/logo.png" alt="E-Biblio Logo">
       </div>
 
       <!-- Nav Links -->
@@ -109,7 +109,7 @@
 
       <!-- Heading -->
       <div class="featured__titles">
-        <h2 class="featured__heading">Featured <span>Titles</span></h2>
+        <h2 class="featured__heading">Featured Titles</h2>
         <p class="featured__description">Looking for something new to read? Check out some of our staff's top picks for this month for some inspiration.</p>
       </div>
 
@@ -198,6 +198,52 @@
         <a href="#" class="reg-prompt__button button--primary button--large">Register</a>
       </div>
 
+    </div>
+  </section>
+
+
+
+
+
+  <!-- Footer
+  ------------------------------------->
+  <section class="footer">
+    <div class="footer__container container">
+
+      <!-- Logo -->
+      <div class="footer__logo">
+        <img src="/img/logo.png" alt="E-Biblio Logo">
+      </div>
+
+      <!-- Message -->
+      <p class="footer__message">Didn't find what you were looking for? Be sure to check back regularly as new titles are uploaded every week. You can also request new titles via our social media!</p>
+
+      <!-- Social Media -->
+      <div class="footer__social">
+        <a href="#" class="footer__icon facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="footer__icon twitter"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="footer__icon youtube"><i class="fab fa-youtube"></i></i></a>
+      </div>
+
+      <!-- Nav Links -->
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Books</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">About</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Basket</a></li>
+      </ul>
+
+    </div>
+
+    <!-- Copyright & Payment Info -->
+    <div class="footer__bottom-wrapper container">
+      <p class="footer__copyright-text">&copy; 2021 E-Biblio Online. All Rights Reserved.</p>
+      <div class="footer__payment-info">
+        <div class="footer__icon mastercard"><i class="fab fa-cc-mastercard"></i></div>
+        <div class="footer__icon visa"><i class="fab fa-cc-visa"></i></div>
+        <div class="footer__icon paypal"><i class="fab fa-cc-paypal"></i></i></div>
+      </div>
     </div>
   </section>
 
