Complete footer and make mobile responsive.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
         <li class="footer__item"><a href="#" class="footer__link">About</a></li>
         <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
         <li class="footer__item"><a href="#" class="footer__link">Basket</a></li>
+        <li class="footer__item"><a href="#" class="footer__link">Wishlist</a></li>
       </ul>
 
     </div>
