Add new html page files and scss files.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- FONT AWSOME
+  <!-- FONT AWESOME
   --------------------------------------------------------->
   <script src="https://kit.fontawesome.com/e9d2f03cce.js" crossorigin="anonymous"></script>
 
@@ -48,7 +48,7 @@
 
       <!-- Nav Links -->
       <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="#top" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="books.html" class="nav__link">Books</a></li>
         <li class="nav__item"><a href="about.html" class="nav__link">About</a></li>
         <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
@@ -56,18 +56,18 @@
 
       <!-- Basket & Account Icons -->
       <ul class="nav__icons">
-        <li class="nav__item"><a href="#" class="nav__icon cartIcon"><i class="fas fa-shopping-basket"></i></a></li>
+        <li class="nav__item"><a href="basket.html" class="nav__icon basketIcon"><i class="fas fa-shopping-basket"></i></a></li>
         <li class="nav__item"><a class="nav__icon userIcon" onclick="toggleDropdownMenu()"><i class="fas fa-user-circle"></i></a></li>
         <!-- Account Dropdown -->
         <ul class="nav__dropdown">
-          <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link username"><strong>username</strong></a></li>
-          <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link">Sign In</a></li>
-          <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link">Create an Account</a></li>
+          <li class="nav__dropdown-item"><a class="nav__dropdown-link username"><strong>username</strong></a></li>
+          <li class="nav__dropdown-item"><a href="login_register.html" class="nav__dropdown-link">Sign In</a></li>
+          <li class="nav__dropdown-item"><a href="login_register.html" class="nav__dropdown-link">Create an Account</a></li>
           <hr>
-          <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link disabled">Wishlist</a></li>
-          <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link disabled">Purchase History</a></li>
+          <li class="nav__dropdown-item"><a href="wishlist.html" class="nav__dropdown-link disabled">Wishlist</a></li>
+          <li class="nav__dropdown-item"><a href="purchase_history.html" class="nav__dropdown-link disabled">Purchase History</a></li>
           <hr>
-          <li class="nav__dropdown-item"><a href="#" class="nav__dropdown-link warning">Logout</a></li>
+          <li class="nav__dropdown-item"><a href="logout.html" class="nav__dropdown-link warning">Logout</a></li>
         </ul>
       </ul>
 
@@ -92,7 +92,7 @@
       <!-- Hero Titles -->
       <div class="hero__titles">
         <h1 class="hero__h1">Welcome to<br><span>E-Biblio </span>Online</h1>
-        <a class="hero__link" href="#">Shop now</i></a>
+        <a class="hero__link" href="books.html">Shop now</i></a>
       </div>
 
     </div>
@@ -119,11 +119,11 @@
 
         <!-- Book Grid Item -->
         <div class="book-grid__item">
-          <a href="#" class="book-grid__link">
+          <a href="book_details.html" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
             <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
           </a>
-          <a href="#" class="book-grid__link">
+          <a href="books.html" class="book-grid__link">
             <h5 class="book-grid__author">J K Rowling</h5>
           </a>
           <h5 class="book-grid__price">£7.99</h5>
@@ -131,11 +131,11 @@
 
         <!-- Book Grid Item -->
         <div class="book-grid__item">
-          <a href="#" class="book-grid__link">
+          <a href="book_details.html" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
             <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
           </a>
-          <a href="#" class="book-grid__link">
+          <a href="books.html" class="book-grid__link">
             <h5 class="book-grid__author">J K Rowling</h5>
           </a>
           <h5 class="book-grid__price">£7.99</h5>
@@ -143,11 +143,11 @@
 
         <!-- Book Grid Item -->
         <div class="book-grid__item">
-          <a href="#" class="book-grid__link">
+          <a href="book_details.html" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
             <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
           </a>
-          <a href="#" class="book-grid__link">
+          <a href="books.html" class="book-grid__link">
             <h5 class="book-grid__author">J K Rowling</h5>
           </a>
           <h5 class="book-grid__price">£7.99</h5>
@@ -155,11 +155,11 @@
 
         <!-- Book Grid Item -->
         <div class="book-grid__item">
-          <a href="#" class="book-grid__link">
+          <a href="book_details.html" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
             <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
           </a>
-          <a href="#" class="book-grid__link">
+          <a href="books.html" class="book-grid__link">
             <h5 class="book-grid__author">J K Rowling</h5>
           </a>
           <h5 class="book-grid__price">£7.99</h5>
@@ -167,11 +167,11 @@
 
         <!-- Book Grid Item -->
         <div class="book-grid__item">
-          <a href="#" class="book-grid__link">
+          <a href="book_details.html" class="book-grid__link">
             <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
             <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
           </a>
-          <a href="#" class="book-grid__link">
+          <a href="books.html" class="book-grid__link">
             <h5 class="book-grid__author">J K Rowling</h5>
           </a>
           <h5 class="book-grid__price">£7.99</h5>
@@ -195,7 +195,7 @@
       <div class="reg-prompt__content">
         <h2 class="reg-prompt__heading">Become A Member Today</h2>
         <p class="reg-prompt__description">Found a book you like, but don't want to buy it right away? Become a member and get your own personal wishlist where you can save titles for later. You'll also gain access to your purchase history, where you can download previously purchased titles on demand.</p>
-        <a href="#" class="reg-prompt__button button--primary button--large">Register</a>
+        <a href="login_register.html" class="reg-prompt__button button--primary button--large">Register</a>
       </div>
 
     </div>
@@ -220,19 +220,18 @@
 
       <!-- Social Media -->
       <div class="footer__social">
-        <a href="#" class="footer__icon facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="footer__icon twitter"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="footer__icon youtube"><i class="fab fa-youtube"></i></i></a>
+        <a class="footer__icon facebook"><i class="fab fa-facebook-f"></i></a>
+        <a class="footer__icon twitter"><i class="fab fa-twitter"></i></a>
+        <a class="footer__icon youtube"><i class="fab fa-youtube"></i></i></a>
       </div>
 
       <!-- Nav Links -->
       <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Books</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">About</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Basket</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Wishlist</a></li>
+        <li class="footer__item"><a href="#top" class="footer__link">Home</a></li>
+        <li class="footer__item"><a href="books.html" class="footer__link">Books</a></li>
+        <li class="footer__item"><a href="about.html" class="footer__link">About</a></li>
+        <li class="footer__item"><a href="contact.html" class="footer__link">Contact</a></li>
+        <li class="footer__item"><a href="basket.html" class="footer__link">Basket</a></li>
       </ul>
 
     </div>
