Complete books.html making mobile responsive.

--- a/books.html
+++ b/books.html
@@ -155,12 +155,85 @@
             <p class="books__category-name">Category</p>
             <p class="books__category-number">(10)</p>
           </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
+          <!-- Category Item -->
+          <a class="books__category-item">
+            <p class="books__category-name">Category</p>
+            <p class="books__category-number">(10)</p>
+          </a>
         </div>
       </div>
 
       <!-- Book Grid -->
       <div class="books__column--wide">
         <div class="books__book-grid book-grid">
+
+          <!-- Book Grid Item -->
+          <div class="book-grid__item">
+            <a href="book_details.html" class="book-grid__link">
+              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+            </a>
+            <a href="books.html" class="book-grid__link">
+              <h5 class="book-grid__author">J K Rowling</h5>
+            </a>
+            <h5 class="book-grid__price">£7.99</h5>
+          </div>
+
+          <!-- Book Grid Item -->
+          <div class="book-grid__item">
+            <a href="book_details.html" class="book-grid__link">
+              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+            </a>
+            <a href="books.html" class="book-grid__link">
+              <h5 class="book-grid__author">J K Rowling</h5>
+            </a>
+            <h5 class="book-grid__price">£7.99</h5>
+          </div>
+
+          <!-- Book Grid Item -->
+          <div class="book-grid__item">
+            <a href="book_details.html" class="book-grid__link">
+              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+            </a>
+            <a href="books.html" class="book-grid__link">
+              <h5 class="book-grid__author">J K Rowling</h5>
+            </a>
+            <h5 class="book-grid__price">£7.99</h5>
+          </div>
+
+          <!-- Book Grid Item -->
+          <div class="book-grid__item">
+            <a href="book_details.html" class="book-grid__link">
+              <img class="book-grid__img" src="/img/book_covers/placeholder.jpg" alt="placeholder">
+              <h4 class="book-grid__title">Harry Potter and the Philosopher's Stone</h4>
+            </a>
+            <a href="books.html" class="book-grid__link">
+              <h5 class="book-grid__author">J K Rowling</h5>
+            </a>
+            <h5 class="book-grid__price">£7.99</h5>
+          </div>
 
           <!-- Book Grid Item -->
           <div class="book-grid__item">
